--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.536.0",
     "nanoid": "^5.1.5",
     "postcss": "^8.5.6",
     "process": "^0.11.10",
