--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "dev:local": "vite --mode development",
+    "build": "vite build --mode production",
+    "build:prod": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
